--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "concurrently --kill-others \"npm run dev-worker\" \"ng serve\"",
+    "build": "npm run build-worker && ng build",
+    "start-lib": "ng build ng-webworker-helper --watch",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-worker": "ng run WebWorkerExample:build-worker",
+    "dev-worker": "ng run WebWorkerExample:dev-worker"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +37,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
+    "concurrently": "^4.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -47,6 +51,6 @@
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.0.1"
+    "typescript": "~3.1.1"
   }
 }
